FB28965: Firefox in windows menu item alignment bug fix.

--- a/public_html/site/styles/generic/base.css
+++ b/public_html/site/styles/generic/base.css
@@ -180,9 +180,12 @@ ul#main-nav-top {display: block; max-width: 960px; width: 99.6%; text-align: cen
 ul#main-nav-top li  {display: inline; color: #FFFFFF;  text-shadow: 0px -2px 1px #58686d; font-weight: bold; font-size: 1.1em; margin: 0px; } 
 ul#main-nav-top li.home a {margin-left: 0.2%; }
 ul#main-nav-top li.home a:hover {-webkit-border-radius: 9px 0 0 9px; -moz-border-radius: 9px 0 0 9px; border-radius: 9px 0 0 9px;}
-ul#main-nav-top li.feedback a:link, ul#main-nav-top li.feedback a:visited {width: 20.1%;}
-ul#main-nav-top li.feedback a:hover {-webkit-border-radius: 0 9px 9px 0; -moz-border-radius: 0 9px 9px 0; border-radius: 0 9px 9px 0;}
-ul#main-nav-top li {border-right: 2px solid #FFFFFF; margin-left: -3px; padding: 8px 0}
+ul#main-nav-top li.feedback a:link, ul#main-nav-top li.feedback a:visited {width: 20.1%;transition: none; -moz-transition: none; -webkit-transition: none; -o-transition: none;}
+@-moz-document url-prefix() {
+ul#main-nav-top li.feedback a:link, ul#main-nav-top li.feedback a:visited  {width: 19.9%;}
+}
+ul#main-nav-top li.feedback a:hover {-webkit-border-radius: 0 9px 9px 0; -moz-border-radius: 0 9px 9px 0; border-radius: 0 9px 9px 0; transition: none; -moz-transition: none; -webkit-transition: none; -o-transition: none;}
+ul#main-nav-top li {border-right: 2px solid #FFFFFF; margin-left: -3px; padding: 8px 0;}
 ul#main-nav-top li.feedback {border: none;}
 ul#main-nav-top li a span {padding-left: 30px;}
 ul#main-nav-top li.home a {background: url(../css_img/home-nav-bg.gif) 35px 10px no-repeat transparent;}
